DOMTokenList.contains() should not throw.

https://dom.spec.whatwg.org/#dom-domtokenlist-contains-token-token
https://dom.spec.whatwg.org/#dom-domtokenlist-contains
New behavior matches to the DOM standard, Firefox, and Safari.

This CL fixes 60 failing tests in wpt/dom/.

BUG=600964

Review-Url: https://codereview.chromium.org/2898063003
Cr-Commit-Position: refs/heads/master@{#473826}

Former-commit-id: 719237584073bc2ef77a64e4f8b1514e66ef037e