third_party/WebKit/LayoutTests/fast/dom/HTMLElement/resources/class-list.js
@@ -154,14 +154,10 @@ function shouldThrowDOMException(f, ec)
 }
 
 createElement('x');
-shouldThrowDOMException(function() {
-    element.classList.contains('');
-}, DOMException.SYNTAX_ERR);
+shouldNotThrow('element.classList.contains("")');
 
 createElement('x y');
-shouldThrowDOMException(function() {
-    element.classList.contains('x y');
-}, DOMException.INVALID_CHARACTER_ERR);
+shouldNotThrow('element.classList.contains("x y")');
 
 createElement('');
 shouldThrowDOMException(function() {
